# ClothesMatching

./: .gitignore  App.py  Clothes.py  Color.py  DisplayCard.py  DisplayCards.py  FileUploader.py  MatchCards.py  README.md  api.py  constants.py  database.db  global_colors.py  global_combinations.py  main.py  prepare_colors.py  prepare_combinations.py  process_image.py  pyproject.toml  requirements.txt  start_app_from_scratch.py  vercel.json
commons/: constants.py  global_colors.py  global_combinations.py
database/: database.db
models/: Clothes.py  Combination.py
service/: prepare_colors.py  prepare_combinations.py  process_image.py
src/package_wielkate/: just.py
src/package_wielkate/main/: App.py  Card.py  Clothes.json  Clothes.py  Color.py  Combination.py  Combinations.csv  DisplayCard.py  DisplayCards.py  FileUploader.py  MatchCard.py  MatchCards.py  MobileApp.py  TodoApp.py  __init__.py  __main__.py  commons.py  constants.py  global_clothes.py  main.py  prepare_combinations.py  process_images.py
src/package_wielkate/main/commons/: constants.py  global_clothes.py  global_colors.py  global_combinations.py
src/package_wielkate/main/database/: database.db
src/package_wielkate/main/endpoints/: endpoints.py
src/package_wielkate/main/models/: Clothes.py  Color.py  Combination.py
src/package_wielkate/main/resources/: auth.py
src/package_wielkate/main/scripts/: prepare_colors.py  prepare_combinations.py  process_image.py  (+1 more)
ui/: App.py  DisplayCard.py  DisplayCards.py  FileUploader.py  MatchCard.py  MatchCards.py  MobileApp.py  OptionsList.py
(+9 files in other folders)
